--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     },
     "require": {
         "php": "^8.2",
-        "craftcms/cms": "^5.0.0"
+        "craftcms/cms": "^5.0.0",
+        "phpoffice/phpspreadsheet": "^2.0 || ^3.0"
     },
     "require-dev": {
         "craftcms/ecs": "dev-main",
